fixed text align css

--- a/Pages/team.css
+++ b/Pages/team.css
@@ -19,6 +19,11 @@
     color: #fff;
     font-weight: 500;
     margin-bottom: 40px;
+    font-family: Arial, Helvetica, sans-serif;
+    letter-spacing: 1px;
+    margin-left: 12%;
+    max-width: 80%;
+    
     
     /* text-align: center; */
     
@@ -45,6 +50,7 @@
     font-weight: 200;
     color: #fff;   
     padding-left: 25%;
+    font-family: Arial, Helvetica, sans-serif;
 
 }
 
